force-app/package/objects/Auth_Provider_Login_History__c/Auth_Provider_Login_History__c.object-meta.xml
<CustomObject>
    <description>An sObject to store login history details of (users) logging into custom auth providers.</description>
    <label>Auth Provider Login History</label>
    <nameField>
        <displayFormat>HIS-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auth Provider Login History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>