force-app/package/objects/Auth_Provider_Login_History__c/fields/Flow_Type__c.field-meta.xml
<CustomField>
    <fullName>Flow_Type__c</fullName>
    <defaultValue>&apos;Initial&apos;</defaultValue>
    <description>Indicator if the login was established using an initial flow or a refresh token flow.</description>
    <label>Flow Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
                <default>true</default>
                <label>Initial</label>
            </value>
            <value>
                <fullName>Refresh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>