force-app/package/objects/Auth_Provider_Login_History__c/fields/Login_Info__c.field-meta.xml
<CustomField>
    <fullName>Login_Info__c</fullName>
    <description>Optional field to add additional info to the login history. This can be anything from an error message to debug info you need.</description>
    <inlineHelpText>Optional field to add additional info to the login history. This can be anything from an error message to debug info you need.</inlineHelpText>
    <label>Login Info</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>