force-app/package/objects/Auth_Provider_Login_History__c/fields/Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Provider_Type__c</fullName>
    <description>An optional provider type. If you have chained key process you can use this field to verify where in the process something happens.</description>
    <inlineHelpText>An optional provider type. If you have chained key process you can use this field to verify where in the process something happens.</inlineHelpText>
    <label>Provider Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>