force-app/package/objects/Auth_Provider_Login_History__c/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Optional indicator if the login attempt was successful</description>
    <inlineHelpText>Optional indicator if the login attempt was successful</inlineHelpText>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>