force-app/package/objects/Auth_Provider_Login_History__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Auth_Provider_Login_History</relationshipName>
    <type>Lookup</type>
</CustomField>