force-app/package/objects/Auth_Provider_Login_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Auth_Provider_Name__c</columns>
    <columns>User__c</columns>
    <columns>Flow_Type__c</columns>
    <columns>Timestamp__c</columns>
    <columns>Success__c</columns>
    <columns>Provider_Type__c</columns>
    <columns>Login_Info__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>